Configurando crud para item e adicionando alguns tratamentos de exceção

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+server.port=${PORT:15001}
 
+spring.datasource.url=jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS BOOKING
+spring.jpa.hibernate.ddl-auto=create
