--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,8 +17,22 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  test:
+    runs-on: ubuntu-latest
 
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Teste com maven
+        run: |
+          ./gradlew clean test
+
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -28,10 +42,6 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-
-    - name: Teste com maven
-      run: |
-        ./gradlew clean test
 
     - name: Build with Gradle
       run: |
